<!-- Defines the value of the strings parameters of name name used by the UI elements-->
<resources>
    <string name="app_name">Archelon</string>

    <string name="login_button">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="under_logo">Archelon</string>
    <string name="under_logo2">Τhe Sea Turtle Protection Society of Greece</string>
    <string name="new_survey_btn">Start New Survey</string>
    <string name="nest_check_btn">Nest Check</string>
    <string name="emergency_relocation_btn">Emergency Relocation</string>
    <string name="start_excavation_btn">Start Excavation</string>
    <string name="morning_survey_1_title">Morning Survey</string>
    <string name="morning_survey_2_obs_title">Observers</string>
    <string name="morning_survey_2_weather">Weather</string>
    <string name="date_hint">Date</string>
    <string name="time_hint">Time</string>
    <string name="beach_hint">Beach</string>
    <string name="beach_sector_hint">Beach Sector</string>
    <string name="start_new_survey_button_btn">Start New Survey</string>
    <string name="previous_btn">Previous</string>
    <string name="next_btn">Next</string>
    <string name="cancel_survey_btn">Cancel</string>
    <string name="main_frag_title">Main Menu</string>
    <string name="obs_leader_hint">MS Leader</string>
    <string name="second_obs_hint">Second Observer</string>
    <string name="weather_sky_hint">Sky</string>
    <string name="weather_precipitation_hint">Precipitation</string>
    <string name="weather_wind_intensity_hint">Wind Intensity</string>
    <string name="end_survey_btn">End Survey</string>
    <string name="end_survey_top">Submit Survey</string>
    <string name="timestamp">Timestamp</string>



</resources>
