<?xml version="1.0" encoding="utf-8"?>
<!-- MorningSurveyFragment2 Layout file -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".screens.morningsurvey.MorningSurveyFragment2">

        <LinearLayout

            android:id="@+id/morning_survey_2_observers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="30sp">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_weight="1"
                android:text="@string/morning_survey_2_obs_title"
                android:textAlignment="center"
                android:textSize="@dimen/morning_survey_title_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/ms_leader_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/obs_leader_hint"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/second_obs_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/second_obs_hint"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/morning_survey_2_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="30sp">

            <TextView
                android:id="@+id/morning_survey_2_weather_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_weight="1"
                android:text="@string/morning_survey_2_weather"
                android:textAlignment="center"
                android:textSize="@dimen/morning_survey_title_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sky_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weather_sky_hint" />

            <Spinner
                android:id="@+id/sky_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp" />

            <TextView
                android:id="@+id/precipitation_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weather_precipitation_hint" />

            <Spinner
                android:id="@+id/precipitation_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp" />

            <TextView
                android:id="@+id/wind_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weather_wind_intensity_hint" />

            <Spinner
                android:id="@+id/wind_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50sp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ms2_previous_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:text="@string/previous_btn" />

            <Button
                android:id="@+id/ms2_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:text="@string/cancel_survey_btn" />

            <Button
                android:id="@+id/ms2_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:text="@string/next_btn" />
        </LinearLayout>


    </LinearLayout>
</layout>