<?xml version="1.0" encoding="utf-8"?>
<!--Layout file of fragment_main-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/main_parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20sp"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".MainFragment">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30sp">

            <TextView
                android:id="@+id/main_title_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/main_frag_title"
                android:textColor="@android:color/primary_text_light"
                android:textSize="@dimen/main_frag_title_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/start_survey_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:layout_weight="1"
                android:text="@string/new_survey_btn" />

            <Button
                android:id="@+id/nest_check_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:layout_weight="1"
                android:text="@string/nest_check_btn" />

            <Button
                android:id="@+id/emergency_relocation_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:layout_weight="1"
                android:text="@string/emergency_relocation_btn" />

            <Button
                android:id="@+id/start_excavation_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:layout_weight="1"
                android:text="@string/start_excavation_btn" />
        </LinearLayout>
    </LinearLayout>
</layout>